# application_design_labs

./: .gitignore  CMakeLists.txt
lab1_client_server/: CMakeLists.txt  README.md  client.cpp  server.cpp  socket.cpp  socket.h  utils.cpp  utils.h
lab2_chord/: CMakeLists.txt  README.md  chord.cpp  chord.h  main.cpp  main1.cpp  main_debug.cpp  socket.cpp  socket.h  utils.cpp  utils.h
lab3_simple_torrent/: CMakeLists.txt  README.md  bencode.cpp  bencode.h  bit_message.h  download_manager.h  peer.h  socket.cpp  socket.h  torrent.cpp  torrent_file.cpp  torrent_file.h  torrent_file_parser.cpp  torrent_file_parser.h  utils.cpp  utils.h
lab3_simple_torrent/bencode/: BDictionary.cpp
lab3_simple_torrent/files/: 7-zip_21.01_alpha.torrent  test.torrent  winrar-x64-611ru_m.exe.torrent
lab3_simple_torrent/sha1/: sha1.cpp
lab3_simple_torrent/utils/: utils.h
lab3_simple_torrent/utils/bencode/: bencode.hpp
lab3_simple_torrent/utils/sha1/: sha1.h
lab3_simple_torrent/utils/socket/: socket.cpp  socket.h
lab4_streaming/: CMakeLists.txt  README.md  client.cpp  repeater.cpp  server.cpp
lab4_streaming/utils/socket/: socket.cpp  socket.h
